# cpp-hpc-primitives

./: CMakeLists.txt
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  bench_deque.cpp  bench_dynamic_queue.cpp  bench_fixed_queue.cpp  bench_stack.cpp  bench_vector.cpp
cmake/: CompilerOptions.cmake
include/hpc/core/: deque.hpp  dynamic_queue.hpp  queue.hpp  stack.hpp  ttas_spinlock.hpp  vector.hpp
include/hpc/support/: cache_line.hpp
tests/: CMakeLists.txt  test_deque.cpp  test_dynamic_queue.cpp  test_queue.cpp  test_stack.cpp  test_vector.cpp
